pbsblasaux = files('pbstran.f', 'pbsmatadd.f', 'pbstrsrt.f', 'pbstrget.f', 'pbstrnv.f', 'pbsvecadd.f', 'pbstrst1.f')
pbcblasaux = files('pbctran.f', 'pbcmatadd.f', 'pbctrsrt.f', 'pbctrget.f', 'pbctrnv.f', 'pbcvecadd.f', 'pbctrst1.f')
pbdblasaux = files('pbdtran.f', 'pbdmatadd.f', 'pbdtrsrt.f', 'pbdtrget.f', 'pbdtrnv.f', 'pbdvecadd.f', 'pbdtrst1.f')
pbzblasaux = files('pbztran.f', 'pbzmatadd.f', 'pbztrsrt.f', 'pbztrget.f', 'pbztrnv.f', 'pbzvecadd.f', 'pbztrst1.f')
pbblas = [pbsblasaux, pbcblasaux, pbdblasaux, pbzblasaux]
