if arith == 's'
pbblas = files('pbstran.f', 'pbsmatadd.f', 'pbstrsrt.f', 'pbstrget.f', 'pbstrnv.f', 'pbsvecadd.f', 'pbstrst1.f')
endif

if arith == 'c'
pbblas = files('pbctran.f', 'pbcmatadd.f', 'pbctrsrt.f', 'pbctrget.f', 'pbctrnv.f', 'pbcvecadd.f', 'pbctrst1.f')
endif

if arith == 'd'
pbblas = files('pbdtran.f', 'pbdmatadd.f', 'pbdtrsrt.f', 'pbdtrget.f', 'pbdtrnv.f', 'pbdvecadd.f', 'pbdtrst1.f')
endif

if arith == 'z'
pbblas = files('pbztran.f', 'pbzmatadd.f', 'pbztrsrt.f', 'pbztrget.f', 'pbztrnv.f', 'pbzvecadd.f', 'pbztrst1.f')
endif